<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/result_top_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="17dp"

            android:layout_marginStart="20dp"
            app:cardElevation="4dp"
            android:id="@+id/backTopicFromSample"
            app:cardPreventCornerOverlap="true"
           >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@null"
                android:contentDescription="@string/back"
                android:src="@drawable/orange_back_ic" />
        </androidx.cardview.widget.CardView>

<!--        <ImageView-->
<!--            android:id="@+id/backTopicFromSample"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:contentDescription="@string/back"-->
<!--            android:src="@drawable/back_arrow" />-->

        <TextView
            android:id="@+id/topicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColor="#ffffff"
            android:textSize="24sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_inner_linear"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/performance"
                    android:textColor="#000000"

                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/per_result"
                    android:textSize="15sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/score"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="12dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/green_tick" />

                            <TextView
                                android:id="@+id/corectTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/cross" />

                            <TextView
                                android:id="@+id/incorectText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/double_arrow" />

                            <TextView
                                android:id="@+id/unanswered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>



                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/statistics"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart2"
                        android:layout_width="120dp"
                        android:layout_height="120dp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="55dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/accuracy"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="92dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Avg"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>