<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"

    tools:context=".VideoPlayerFragments.VideoNew"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Share : "
                    android:textAllCaps="false"
                    android:textColor="#25375F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ShareText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Take quiz first."
                    android:textColor="#5BDD2B"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />

                <ImageButton
                    android:id="@+id/StatsShareIcon"
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="1dp"

                    android:layout_weight="1"
                    android:background="@drawable/timer_round"

                    android:scaleType="centerInside"

                    android:src="@drawable/share_icon" />
            </LinearLayout>

            <View
                android:id="@+id/viewLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/fragswipe">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/score"
                    android:textColor="#25375F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="12dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="30dp"
                                android:src="@drawable/green_tick" />

                            <TextView
                                android:id="@+id/corectTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="25dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/cross" />

                            <TextView
                                android:id="@+id/incorectText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/double_arrow" />

                            <TextView
                                android:id="@+id/unanswered"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text=""
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="150dp"
                            android:layout_height="1dp"
                            android:layout_marginLeft="25dp"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/statistics"
                    android:textColor="#25375F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart2"
                        android:layout_width="120dp"
                        android:layout_height="120dp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/piechart3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="55dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/accuracy"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="92dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Avg"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>